--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,7 @@
 
 body{
     height: 100vh;
-    background: url("sanvalentin.jpg") no-repeat center center/cover;
+    background: url("sanvalentin.jpeg") no-repeat center center/cover;
 }
 
 /* Capa oscura encima de la imagen */
